# k2-designer

./: .env  .gitignore  CLAUDE.md  LICENSE  README.md  REVIEW.md  add_license_headers.py  main.py  migrate_sqlite_to_json.py  pyproject.toml  requirements.txt  test_conn.k2p  test_datagrid.py
docs/: alt_scroll_zoom_feature.md  auto_load_last_project_feature.md  canvas_panning_feature.md  color_picker_enhancement.md  column_domain_integration_feature.md  csv_column_import_feature.md  data_grid_integration.md  data_grid_quick_reference.md  description.md  diagram_duplicate_prevention_feature.md  diagram_view_state_persistence_feature.md  diagram_view_state_quick_reference.md  domain_persistence_fix.md  dynamic_theme_support.md  guid_feature.md  json_export_import_feature.md  json_storage_migration.md  multiple_selection_feature.md  multiple_selection_summary.md  naming_rules_feature.md  new_project_dialog_feature.md  object_browser_double_click_feature.md  object_browser_filter_feature.md  project_settings_feature.md  project_settings_implementation_summary.md  row_movement_feature.md  tabbed_diagram_interface_feature.md  table_dialog_ui_improvement.md  template_grouping_feature.md  template_system_quick_reference.md  test_data_generation_feature.md  theme_feature.md  user_settings_refactoring.md
examples/: columns_advanced.csv  columns_basic.csv  columns_pipe_delimited.txt  columns_tab_delimited.txt
k2_designer/: __init__.py
k2_designer/dialogs/: domain_dialog.py  generate_dialog.py  key_dialog.py  owner_dialog.py  sequence_dialog.py  stereotype_dialog.py  table_dialog.py
k2_designer/models/: base.py  project.py
k2_designer/views/: __init__.py  diagram_view.py
k2core/: __init__.py  pyproject.toml
k2core/controllers/: naming_rules_engine.py  project_manager.py  template_manager.py  user_settings.py
k2core/models/: __init__.py  base.py  domain.py  owner.py  table.py
k2core/tests/: conftest.py  test_column.py  test_index.py  test_key.py  test_partitioning.py  test_project.py  test_table.py
k2devtools/: pyproject.toml
k2devtools/k2devtools/: __init__.py
k2devtools/k2devtools/gallery/: data_grid_examples.py  main.py
k2devtools/tests/: test_datagrid_coverage.py  test_datagrid_excel.py
k2gui/: pyproject.toml
k2gui/dialogs/: diagram_dialog.py  generate_dialog.py  sequence_dialog.py  stereotype_dialog.py  table_dialog.py
k2gui/views/: diagram_view.py  main_window.py  object_browser.py  properties_panel.py
k2gui/widgets/: README.md  __init__.py  data_grid_widget.py
k2widgets/: pyproject.toml
k2widgets/k2widgets/: __init__.py  data_grid_widget.py
src/k2_designer/: __init__.py
src/k2_designer/controllers/: __init__.py  naming_rules_engine.py  project_manager.py  template_manager.py  test_data_generator.py  user_settings.py
src/k2_designer/dialogs/: __init__.py  about_dialog.py  csv_import_dialog.py  diagram_dialog.py  domain_dialog.py  generate_dialog.py  key_dialog.py  new_project_dialog.py  owner_dialog.py  project_settings_dialog.py  sequence_dialog.py  stereotype_dialog.py  table_dialog.py
src/k2_designer/models/: __init__.py  base.py  diagram.py  domain.py  owner.py  project.py  sequence.py  table.py
src/k2_designer/views/: __init__.py  diagram_view.py  main_window.py  object_browser.py  properties_panel.py
src/k2_designer/widgets/: README.md  __init__.py  data_grid_examples.py  data_grid_widget.py
templates/: create_sequence.sql.j2  create_table.sql.j2  create_user.sql.j2  naming_rules.j2
templates/sequences/: create_sequence.sql.j2
templates/tables/: archive_table.sql.j2  audit_trigger.sql.j2  create_table.sql.j2
templates/users/: create_user.sql.j2
