[project]
name = "k2-designer"
version = "1.0.0"
description = "Database schema designer with visual ER diagrams and SQL generation"
requires-python = ">=3.13"
dependencies = [
    "PySide6>=6.5.0",
    "oracledb>=1.4.0",
    "jinja2>=3.1.0",
]

[project.scripts]
k2-designer = "k2_designer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/k2_designer"]
