[project]
name = "k2-designer"
version = "1.0.0"
description = "Database schema designer with visual ER diagrams and SQL generation"
requires-python = ">=3.13"
dependencies = [
    "PySide6>=6.5.0",
    "oracledb>=1.4.0",
    "jinja2>=3.1.0",
]

[project.scripts]
k2-designer = "k2_designer:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["k2_designer"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/k2_designer"]
