[project]
name = "k2-designer"
version = "1.0.0"
description = "Database schema designer with visual ER diagrams and SQL generation"
requires-python = ">=3.13"
dependencies = [
    "k2core",
    "PySide6>=6.5.0",
]

[project.scripts]
k2-designer = "k2gui:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.uv.workspace]
members = ["k2core", "k2gui"]

[tool.uv.sources]
k2core = { workspace = true }
k2gui = { workspace = true }

[tool.ruff.lint.isort]
known-first-party = ["k2gui", "k2core"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["k2gui"]
