[project]
name = "k2core"
version = "0.1.0"
description = "K2 Designer core — models and business logic, no GUI dependencies"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.0",
    "oracledb>=1.4.0",
    "pydantic>=2.13.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["k2core"]
