[project]
name = "k2core"
version = "0.1.0"
description = "K2 Designer core — models and business logic, no GUI dependencies"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.0",
    "oracledb>=1.4.0",
    "pydantic>=2.13.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["k2core"]
