[project]
name = "k2devtools"
version = "0.1.0"
description = "K2 Designer developer tools — component gallery and dev utilities"
requires-python = ">=3.13"
dependencies = [
    "k2widgets",
]

[tool.uv.sources]
k2widgets = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["k2devtools"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
]
