[project]
name = "k2widgets"
version = "0.1.0"
description = "Reusable PySide6 widgets — no application-domain dependencies"
requires-python = ">=3.13"
dependencies = [
    "PySide6>=6.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["k2widgets"]
